--- a/client/src/app/recipes/create/create.component.html
+++ b/client/src/app/recipes/create/create.component.html
@@ -344,7 +344,7 @@
       <button mat-raised-button color="primary" [disabled]="form.invalid">
         Edit
       </button>
-      <button mat-raised-button color="warn" (click)="(onCancel)">
+      <button mat-raised-button color="warn" (click)="onCancel()">
         Cancel
       </button>
     </div>
