--- a/client/src/custom-theme.scss
+++ b/client/src/custom-theme.scss
@@ -44,20 +44,20 @@ $md-mcgpalettegreen: (
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$Relish-Time-App-primary: mat.define-palette($md-mcgpalettegreen, 900);
-$Relish-Time-App-accent: mat.define-palette(
-  mat.$pink-palette,
+$Relish-Time-App-primary: mat.m2-define-palette($md-mcgpalettegreen, 900);
+$Relish-Time-App-accent: mat.m2-define-palette(
+  mat.$m2-pink-palette,
   A200,
   A100,
   A400
 );
 
 // The warn palette is optional (defaults to red).
-$Relish-Time-App-warn: mat.define-palette(mat.$red-palette);
+$Relish-Time-App-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$Relish-Time-App-theme: mat.define-light-theme(
+$Relish-Time-App-theme: mat.m2-define-light-theme(
   (
     color: (
       primary: $Relish-Time-App-primary,
