--- a/client/src/app/core/header/header.component.html
+++ b/client/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <nav>
-    <h1 class="nav-title"><a routerLink="/">RELISH TIME</a></h1>
+    <h1 class="nav-title"><a routerLink="/">Recipes</a></h1>
 
     <div class="nav-list">
       <ul>
